# GMOD-Offset-Dumper

./: CMakeLists.txt  README.md  library.cpp
math/: math.cpp  math.h
sdk/: color.h  fnv.h  interfaces.cpp  interfaces.h
sdk/interfaces/: surface.h
sdk/utils/: memory_utils.h  netvars.cpp  netvars.h
